[package]
name = "helm-synthesizer"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Typed AST for structurally correct Helm chart generation"
license = "MIT"
repository = "https://github.com/pleme-io/helm-synthesizer"

[dependencies]
yaml-synthesizer = { path = "../yaml-synthesizer" }
synthesizer-core = { git = "https://github.com/pleme-io/synthesizer-core" }

[dev-dependencies]
proptest = "1"
tree-sitter = "0.24"
tree-sitter-yaml = "0.6"
